working on mobile rotation bug

--- a/beta2/css/style.css
+++ b/beta2/css/style.css
@@ -201,7 +201,7 @@ ul {
 }
 
 .masthead {
-	position: absolute;
+	position: relative;
 	height: calc(100% - 200px);
 	width: 100%;
 }
@@ -249,7 +249,7 @@ ul {
 }
 
 .about-section {
-
+	position: relative;
 }
 .about-overlay {
   position: absolute;
